Enable non-linear time slider